support turbo api

--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   "dependencies": {
     "@geist-ui/core": "^2.3.8",
     "@primer/octicons-react": "^17.9.0",
+    "@waylaidwanderer/chatgpt-api": "^1.20.9",
     "daisyui": "^2.50.1",
+    "events": "^3.3.0",
     "eventsource-parser": "^0.0.5",
     "expiry-map": "^2.0.0",
-    "github-markdown-css": "^5.1.0",
+    "gpt-3-encoder": "^1.1.4",
     "inter-ui": "^3.19.3",
+    "keyv": "^4.5.2",
     "lodash-es": "^4.17.21",
+    "p-timeout": "^6.1.1",
     "posthog-js": "^1.39.0",
     "preact": "^10.11.3",
     "prop-types": "^15.8.1",
     "punycode": "^2.1.1",
+    "quick-lru": "^6.1.1",
     "react": "npm:@preact/compat@^17.1.2",
     "react-dom": "npm:@preact/compat@^17.1.2",
     "react-markdown": "^8.0.4",
@@ -47,6 +52,7 @@
     "fs-extra": "^11.1.0",
     "husky": "^8.0.0",
     "lint-staged": "^13.1.0",
+    "openai": "^3.2.1",
     "postcss": "^8.4.20",
     "postcss-scss": "^4.0.6",
     "prettier": "^2.8.0",
